# red-batch

./: .gitignore  LICENSE  README.md  SUBMISSION.md  next.config.mjs  package-lock.json  package.json  stack.lock.json  wrangler.jsonc
app/: globals.css  layout.tsx  page.tsx
app/api/cases/[code]/: route.ts
app/api/cases/[code]/approve/: route.ts
app/api/cases/[code]/run/: route.ts
app/api/demo/reset/: route.ts
app/api/integration-status/: route.ts
app/api/packets/[code]/: route.ts
app/api/search/: route.ts
app/cases/: page.tsx
app/cases/[code]/: page.tsx
app/components/: AppShell.tsx  CaseWorkbench.tsx  ConfidenceMeter.tsx  GovernancePanel.tsx  Logo.tsx  RoleBadge.tsx  StatusChip.tsx
app/lib/: caseDetail.ts  format.ts  llm.ts  policy.ts  repo.ts  session.ts  types.ts
app/lib/agent/: containmentAgent.ts
app/lib/db/: client.ts  seed.ts
app/lib/uipath/: orchestrator.ts
app/packets/[code]/: page.tsx
app/reopen/: page.tsx
docs/: red-batch-deck.pptx  uipath-proof.md
migrations/: 0001_init.sql
scripts/: add_deck_proof.py  apply-use-key-env.mjs  db-stats.mjs  get.mjs  kw.mjs  shoot.sh  show-runs.mjs  smoke.mjs  tts.mjs  uipath-smoke.mjs  uipath-task-complete-test.mjs  uipath-task-test.mjs  uipath-task-verify.mjs
uipath-agent/: README.md  entry-points.json  main.mermaid  main.py  project.uiproj  pyproject.toml  uipath.json
